--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = cor"
+    "ba_longitude = coordinat"
    ]
   },
   {
